--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,6 +45,11 @@ bind | split-window -h -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
+# SessionX
+set -g @sessionx-bind o
+set -g @sessionx-filter-current true
+set -g @sessionx-window-height '80%'
+
 # Status bar
 set-option -g status-position top
 set -g status-left-length 100
@@ -90,6 +95,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'dracula/tmux'
 
 run '~/.tmux/plugins/tpm/tpm'
