Lock minor versions for global mise tools

--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -1,66 +1,88 @@
+# Rule of thumb: specify to the minor version to make sure 
+# to get new patches, but don't install a whole new 
+# major/minor unintentionally
+#
+# Commented tools are optional, might not be needed on a 
+# lightweight test env but are still things I want to 
+# track for more full dev env
+
 [tools]
 # Core Runtimes/Languages
-bun = "1.2"
-deno = "2"
-elixir = "1.18"
-erlang = "27"
+# bun = "1.2"
+# deno = "2"
+# elixir = "1.18"
 go = "1.23"
-node = "22"
+node = "22.14"
 python = "3.11"
-rust = "stable"
+rust = "1.84"
 
 # Dependencies
-bat = "latest"
-eza = "latest"
-jq = "latest"
-ripgrep = "latest"
+bat = "0.25"
+bat-extras = "2024.08.24"
+eza = "0.20"
+fd = "10.2"
+jq = "1.7"
+ripgrep = "14.1"
 
 # Main
-github-cli = "latest"
-pnpm = { version = "latest", postinstall = "corepack enable pnpm"}
-xh = "latest"
+github-cli = "2.67"
+pnpm = { version = "10.3", postinstall = "corepack enable pnpm"}
+xh = "0.23.1"
 
 # Infra
-doctl = "latest"
-flyctl = "latest"
+# doctl = "1.121"
+ctlptl = "0.8"
+# flyctl = "0.3"
+lazydocker = "0.24"
+nerdctl = "2.0"
 
 # Utilities
-age = "latest"
-atlas = "latest"
-choose = "latest"
-delta = "latest"
-duf = "latest"
-dust = "latest"
-fd = "latest"
-ffmpeg = "latest"
-glow = "latest"
-jc = "latest"
-jd = "latest"
-jnv = "latest"
-jqp = "latest"
-killport = "latest"
-lazydocker = "latest"
-mitmproxy = "latest"
-mkcert = "latest"
-nerdctl = "latest"
-peco = "latest"
-qsv = "latest"
-rclone = "latest"
-redo = "latest"
-rlwrap = "latest"
-schemacrawler = "latest"
-shellcheck = "latest"
-sops = "latest"
-sqlite = "latest"
-tree-sitter = "latest"
-usage = "latest"
-usql = "latest"
-uv = "latest"
-wrk = "latest"
-wtfutil = "latest"
-yj = "latest"
-yq = "latest"
-yt-dlp = "latest"
+age = "1.2"
+alp = "1.0"
+atlas = "0.31"
+bottom = "0.10"
+certstrap = "1.3"
+choose = "1.3"
+dasel = "2.8"
+delta = "0.18"
+dt = "1.3"
+duf = "0.8"
+dust = "1.1"
+fillin = "0.3"
+fx = "35"
+gdu = "5.30"
+ghq = "1.7"
+gitconfig = "1.0"
+glow = "2.0"
+grex = "1.4"
+hostctl ="1.1"
+hurl = "6.0"
+hwatch = "0.3"
+jc = "1.25"
+jd = "2.0"
+jnv = "0.5"
+jqp = "0.7"
+killport = "1.1"
+mitmproxy = "9.0"
+mkcert = "1.4"
+peco = "0.5"
+qsv = "3.0"
+rclone = "1.69"
+redo = "0.8"
+ripgrep-all = "0.10"
+rlwrap = "0.46"
+schemacrawler = "16.25"
+shellcheck = "0.10"
+sops = "3.9"
+sqlite = "3.49"
+tree-sitter = "0.25"
+usage = "2.0"
+usql = "0.19"
+uv = "0.5"
+wtfutil = "0.43"
+yj = "5.1"
+yq = "4.45"
+yt-dlp = "2025.01"
 
 # JS/TS
 biome = "latest"
