--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,17 +11,21 @@ unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
 
-# Vim style pane selection
-bind h select-pane -L
-bind j select-pane -D 
-bind k select-pane -U
-bind l select-pane -R
-
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
+
+# Vim style pane selection
+bind h select-pane -L
+bind C-M-h select-pane -L
+bind j select-pane -D 
+bind C-M-j select-pane -D 
+bind k select-pane -U
+bind C-M-k select-pane -U
+bind l select-pane -R
+bind C-M-l select-pane -R
 
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
@@ -32,6 +36,10 @@ bind -n M-Down select-pane -D
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
 bind -n S-Right next-window
+
+# Vim style (???) window selection
+bind S-h previous-window
+bind S-l next-window
 
 # Vi mode
 set-window-option -g mode-keys vi
@@ -49,6 +57,7 @@ unbind %
 set -g @sessionx-bind o
 set -g @sessionx-filter-current true
 set -g @sessionx-window-height '80%'
+set -g @sessionx-tmuxinator-mode 'on'
 
 # Status bar
 set-option -g status-position top
@@ -96,6 +105,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'omerxx/tmux-sessionx'
+set -g @plugin 'jimeh/tmuxifier'
 set -g @plugin 'dracula/tmux'
 
 run '~/.tmux/plugins/tpm/tpm'
