Consistent tmux conf syntax

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,7 +60,7 @@ set -g @sessionx-window-height '80%'
 set -g @sessionx-tmuxinator-mode 'on'
 
 # Status bar
-set-option -g status-position top
+set -g status-position top
 set -g status-left-length 100
 set -g status-right-length 100
 
