You know I had to do it to em

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,10 @@
-set -g default-terminal "tmux-256color"
-set-option -sa terminal-overrides ",xterm*:Tc"
+set -g default-terminal 'tmux-256color'
+set-option -sa terminal-overrides ',xterm*:Tc'
 set -g mouse on
 
 # Reload config
 unbind r
-bind-key r source-file "$HOME/.tmux.conf"
+bind-key r source-file "$HOME/.tmux.conf"; display -d 1000 "Reloaded tmux config"
 
 # Reset prefix
 unbind C-b
@@ -14,8 +14,8 @@ bind C-Space send-prefix
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
-set-window-option -g pane-base-index 1
-set-option -g renumber-windows on
+setw -g pane-base-index 1
+set -g renumber-windows on
 
 # Vim style pane selection
 bind h select-pane -L
@@ -37,10 +37,6 @@ bind -n M-Down select-pane -D
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 
-# Vim style (???) window selection
-bind S-h previous-window
-bind S-l next-window
-
 # Vi mode
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
@@ -48,8 +44,8 @@ bind-key -T copy-mode-vi S-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # Manage panes
-bind - split-window -v -c "#{pane_current_path}"
-bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c '#{pane_current_path}'
+bind | split-window -h -c '#{pane_current_path}'
 unbind '"'
 unbind %
 
@@ -60,41 +56,21 @@ set -g @sessionx-window-height '80%'
 set -g @sessionx-tmuxinator-mode 'on'
 
 # Status bar
+set -g status on
 set -g status-position top
-set -g status-left-length 100
+set -g status-style 'fg=white'
+set -g status-format[0] "#{E:status-left} #{W:#{E:window-status-format}, #{E:window-status-current-format}} #[align=right]#{E:status-right}"
+
+set -g status-left-length 160
+set -g status-left "#{?client_prefix,#[fg=green bold],#[fg=brightblack]} #S#[none]"
+
+setw -g window-status-current-format '#[fg=blue]#[fg=black,bg=blue]#I #[fg=yellow,bg=#111111,bold] #W #[fg=#111111,bg=default]#[none]'
+setw -g window-status-format '#[fg=brightblack]#[fg=black,bg=brightblack]#I #[fg=brightblack,bg=#111111,] #W #[fg=#111111,bg=default]#[none]'
+
 set -g status-right-length 100
+set -g status-right '#[fg=cyan]󰃮 #[bold]%a %b %d #[fg=brightblack,dim]| #[fg=green] #[bold]%H:%M'
 
-set -g @dracula-transparent-powerline-bg false 
-set -g @dracula-plugins "cpu-usage ram-usage time" # can also use network-bandwidth, weather
-set -g @dracula-show-flags true
-set -g @dracula-show-empty-plugins false
-set -g @dracula-show-powerline true 
-set -g @dracula-show-left-icon "> #S"
-set -g @dracula-show-timezone false
-set -g @dracula-time-format "%b %d %H:%M"
-# set -g @dracula-show-location false
-# set -g @dracula-fixed-location "Charlotte"
-
-set -g @dracula-cpu-usage-label ""
-set -g @dracula-cpu-usage-colors "gray white"
-set -g @dracula-ram-usage-label " "
-set -g @dracula-ram-usage-colors "gray white"
-set -g @dracula-time-colors "dark_purple white"
-
-# Copy below to reset color theme
-set -g @dracula-colors "
-pink='#EE64AE'
-orange='#FAB795'
-yellow='#FBC3A7'
-green='#29D398'
-cyan='#59E3E3'
-light_purple='#3FC6DE'
-white='#FADAD1'
-dark_gray='#1C1E26'
-red='#E95678'
-gray='#232530'
-dark_purple='#64488A'
-"
+set -g message-style 'bg=black,fg=red,bold'
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -105,8 +81,6 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'omerxx/tmux-sessionx'
-set -g @plugin 'jimeh/tmuxifier'
-set -g @plugin 'dracula/tmux'
 
 run '~/.tmux/plugins/tpm/tpm'
 
