More theming tweaks

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,10 +56,11 @@ set -g @sessionx-window-height '80%'
 set -g @sessionx-tmuxinator-mode 'on'
 
 # Status bar
-set -g status on
+set -g status 2 
 set -g status-position top
 set -g status-style 'fg=white'
 set -g status-format[0] "#{E:status-left} #{W:#{E:window-status-format}, #{E:window-status-current-format}} #[align=right]#{E:status-right}"
+set -g status-format[1] ""
 
 set -g status-left-length 160
 set -g status-left "#{?client_prefix,#[fg=green bold],#[fg=brightblack]} #S#[none]"
@@ -68,7 +69,7 @@ setw -g window-status-current-format '#[fg=blue]#[fg=black,bg=blue]#I #[fg=ye
 setw -g window-status-format '#[fg=brightblack]#[fg=black,bg=brightblack]#I #[fg=brightblack,bg=#111111,] #W #[fg=#111111,bg=default]#[none]'
 
 set -g status-right-length 100
-set -g status-right '#[fg=cyan]󰃮 #[bold]%a %b %d #[fg=brightblack,dim]| #[fg=green] #[bold]%H:%M'
+set -g status-right '#[fg=white,dim]󰃮 %a %b %d #[fg=brightblack,dim]| #[fg=green,none] #[bold]%H:%M'
 
 set -g message-style 'bg=black,fg=red,bold'
 
