--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,7 +52,7 @@ unbind %
 # SessionX
 set -g @sessionx-bind o
 set -g @sessionx-filter-current true
-set -g @sessionx-window-height '80%'
+set -g @sessionx-window-height '60%'
 set -g @sessionx-tmuxinator-mode 'on'
 
 # Status bar
@@ -63,13 +63,13 @@ set -g status-format[0] "#{E:status-left} #{W:#{E:window-status-format}, #{E:win
 set -g status-format[1] ""
 
 set -g status-left-length 160
-set -g status-left "#{?client_prefix,#[fg=green bold],#[fg=white dim]} #S #[fg=brightblack,dim]|#[none]"
+set -g status-left "#{?client_prefix,#[fg=blue bold],#[fg=white dim]} #S #[fg=brightblack,dim]|#[none]"
 
 setw -g window-status-current-format '#[fg=blue]#[fg=black,bg=blue]#I #[fg=yellow,bg=#111111,bold] #W #[fg=#111111,bg=default]#[none]'
-setw -g window-status-format '#[fg=brightblack]#[fg=black,bg=brightblack]#I #[fg=brightblack,bg=#111111,] #W #[fg=#111111,bg=default]#[none]'
+setw -g window-status-format '#[fg=brightblack]#[fg=black,bg=brightblack]#I #[fg=white,bg=#111111,dim] #W #[fg=#111111,bg=default]#[none]'
 
 set -g status-right-length 100
-set -g status-right '#[fg=white,dim]󰃮 %a %b %d #[fg=brightblack,dim]| #[fg=green,none] #[bold]%H:%M'
+set -g status-right '#[fg=green]󰃮 #[fg=white,dim]%a %b %d #[fg=brightblack]| #[fg=green,none] #[fg=white,dim]%H:%M'
 
 set -g message-style 'bg=black,fg=red,bold'
 
