--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -8,12 +8,12 @@
 
 [tools]
 # Core Runtimes/Languages
-# bun = "1.2"
+bun = "1.2"
 # deno = "2"
 # elixir = "1.18"
 go = "1.23"
 node = "22.14"
-python = "3.11"
+# python = "3.11"
 rust = "1.84"
 
 # Dependencies
@@ -26,62 +26,62 @@ ripgrep = "14.1"
 
 # Main
 github-cli = "2.67"
-pnpm = { version = "10.3", postinstall = "corepack enable pnpm"}
+pnpm = { version = "10.3", postinstall = "corepack && corepack enable pnpm"}
 xh = "0.23.1"
 
 # Infra
 # doctl = "1.121"
-ctlptl = "0.8"
+# ctlptl = "0.8"
 # flyctl = "0.3"
 lazydocker = "0.24"
-nerdctl = "2.0"
+# nerdctl = "2.0"
 
 # Utilities
 age = "1.2"
-alp = "1.0"
-atlas = "0.31"
+# alp = "1.0"
+# atlas = "0.31"
 bottom = "0.10"
-certstrap = "1.3"
-choose = "1.3"
-dasel = "2.8"
+# certstrap = "1.3"
+# choose = "1.3"
+# dasel = "2.8"
 delta = "0.18"
-dt = "1.3"
+# dt = "1.3"
 duf = "0.8"
-dust = "1.1"
-fillin = "0.3"
-fx = "35"
-gdu = "5.30"
-ghq = "1.7"
+# dust = "1.1"
+# fillin = "0.3"
+# fx = "35"
+# gdu = "5.30"
+# ghq = "1.7"
 gitconfig = "1.0"
-glow = "2.0"
-grex = "1.4"
+# glow = "2.0"
+# grex = "1.4"
 hostctl ="1.1"
-hurl = "6.0"
+# hurl = "6.0"
 hwatch = "0.3"
 jc = "1.25"
-jd = "2.0"
-jnv = "0.5"
-jqp = "0.7"
-killport = "1.1"
-mitmproxy = "9.0"
-mkcert = "1.4"
+# jd = "2.0"
+# jnv = "0.5"
+# jqp = "0.7"
+# killport = "1.1"
+# mitmproxy = "9.0"
+# mkcert = "1.4"
 peco = "0.5"
-qsv = "3.0"
-rclone = "1.69"
-redo = "0.8"
+# qsv = "3.0"
+# rclone = "1.69"
+# redo = "0.8"
 ripgrep-all = "0.10"
-rlwrap = "0.46"
-shellcheck = "0.10"
-sops = "3.9"
-sqlite = "3.49"
+# rlwrap = "0.46"
+# shellcheck = "0.10"
+# sops = "3.9"
+# sqlite = "3.49"
 tree-sitter = "0.25"
-usage = "2.0"
-usql = "0.19"
+# usage = "2.0"
+# usql = "0.19"
 uv = "0.5"
-wtfutil = "0.43"
-yj = "5.1"
-yq = "4.45"
-yt-dlp = "2025.01"
+# wtfutil = "0.43"
+# yj = "5.1"
+# yq = "4.45"
+# yt-dlp = "2025.01"
 
 # JS/TS
 biome = "latest"
