bigger window for sessionx

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,8 +52,8 @@ unbind %
 # SessionX
 set -g @sessionx-bind o
 set -g @sessionx-filter-current true
-set -g @sessionx-window-height '60%'
-set -g @sessionx-tmuxinator-mode 'on'
+set -g @sessionx-window-height '80%'
+set -g @sessionx-window-width '96%'
 
 # Status bar
 set -g status 2 
