messin with tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,10 +63,10 @@ set -g status-format[0] "#{E:status-left} #{W:#{E:window-status-format}, #{E:win
 set -g status-format[1] ""
 
 set -g status-left-length 160
-set -g status-left "#{?client_prefix,#[fg=yellow bold],#[fg=white dim]} #S #[fg=brightblack,dim]|#[none]"
+set -g status-left "#{?client_prefix,#[fg=magenta],#[fg=white dim]} #{?client_prefix,#[fg=yellow bold],#[fg=white dim]}#S #[fg=brightblack,dim]|#[none]"
 
-setw -g window-status-current-format '#[fg=green]#[fg=black,bg=green]#I #[fg=yellow,bg=#111111,bold] #W #[fg=#111111,bg=default]#[none]'
-setw -g window-status-format '#[fg=brightblack]#[fg=black,bg=brightblack]#I #[fg=white,bg=#111111,dim] #W #[fg=#111111,bg=default]#[none]'
+setw -g window-status-current-format '#[fg=green]#[fg=black,bg=green]#I #[fg=yellow,bg=#111111,bold] #W #[fg=#111111,bg=default]#[none] '
+setw -g window-status-format '#[fg=brightblack]#[fg=black,bg=brightblack]#I #[fg=white,bg=#111111,dim] #W #[fg=#111111,bg=default]#[none] '
 
 set -g status-right-length 100
 set -g status-right '#[fg=green]󰃮 #[fg=white,dim]%a %b %d #[fg=brightblack]| #[fg=green,none] #[fg=white,dim]%H:%M'
