Remove second tmux status line until i figure out what i want there

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,7 +56,7 @@ set -g @sessionx-window-height '80%'
 set -g @sessionx-window-width '96%'
 
 # Status bar
-set -g status 2 
+#set -g status 2 
 set -g status-position top
 set -g status-style 'fg=white'
 set -g status-format[0] "#{E:status-left} #{W:#{E:window-status-format}, #{E:window-status-current-format}} #[align=right]#{E:status-right}"
