Add sync pane shortcut to tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,6 +33,9 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+# Prefix + z to toggle synced panes
+bind -n P setw synchronize-panes
+
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
 bind -n S-Right next-window
