Fix conflicting 'P' shortcut

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,8 +33,9 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-# Prefix + z to toggle synced panes
-bind -n P setw synchronize-panes
+# Prefix + Ctrl+Alt+p to toggle synced panes
+bind C-M-p setw synchronize-panes
+unbind P
 
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
